--- a/axonenv.yml
+++ b/axonenv.yml
@@ -113,7 +113,7 @@ dependencies:
       - h5py==3.9.0
       - hdmf==3.8.1
       - idna==3.6
-      - inquirerpy==0.3.4
+      - inquirerpy
       - inspyred==1.0.2
       - install==1.3.5
       - ipympl==0.9.3
@@ -166,7 +166,7 @@ dependencies:
       - pubnub==6.3.3
       - pycparser==2.21
       - pycryptodomex==3.18.0
-      - pyinquirer==1.0.3
+      - pyinquirer
       - pynwb==2.4.0
       - pyparsing==3.0.9
       - pyqt5==5.15.10
