--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "AxonReconPipeline/axon_velocity"]
 	path = AxonReconPipeline/axon_velocity
-	url = https://github.com/adamwea/axon_velocity.git
+	url = https://github.com/adamwea/axon_velocity
