--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 **.asv
 **.txt
 **__pycache__**
@@ -20,22 +19,8 @@ slurm*.out
 **.out
 nohup.out
 **.svg
-=======
-**.asv
-**.txt
-**__pycache__**
-IPNAnalysis/AnalyzedData/*
-IPNAnalysis/sorting_intermediate/*
-IPNAnalysis/Sorting_Intermediate_files/*
-IPNAnalysis/sorting/*
-IPNAnalysis/Electrodes/*
-AnalyzedData/*
-**.mat
-.vscode
-**.pkl
-slurm*.out
-**.png
-**.npz
-**.zip
 .DS_Store
->>>>>>> upstream/dev_branch
+**.pdf
+StimulationAnalysis/*
+!StimulationAnalysis/*.ipynb
+!StimulationAnalysis/*.py
