--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ si_ks4/
 IPNAnalysis/kilosort_output/sorter_output/
 NetworkAnalysis/ActivityQuality/*.csv
 kilosort4_output/
+
+# Packaging artifacts
+*.egg-info/
+build/
+dist/
