Adding the connections and ensembles repo

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@ si_ks4/
 IPNAnalysis/kilosort_output/sorter_output/
 NetworkAnalysis/ActivityQuality/*.csv
 kilosort4_output/
+Connections/pyuoi/*
+Connections/pyuoi/
